fixed progress bar flickering on reload

--- a/src/main/resources/static/styles/workspace.scss
+++ b/src/main/resources/static/styles/workspace.scss
@@ -43,6 +43,7 @@
     height: 4px;
     background-color: $primary-container;
     border-radius: 2px;
+    width: 100%;
 
     .track-stop {
       height: 100%;
